--- a/Hoja de trabajo #1.ipynb
+++ b/Hoja de trabajo #1.ipynb
@@ -349,16 +349,14 @@
     "green = cv2.imread(\"i1_verde.jpg\")\n",
     "red = cv2.imread(\"i1_rojo.jpg\")\n",
     "\n",
-    "stacked_img = np.stack((red,green,blue), axis=-1)\n",
-    "print(stacked_img)\n",
+    "#stacked_img = np.stack((red,green,blue), axis=-1)\n",
+    "#print(stacked_img)\n",
     "\n",
-    "cv2.imwrite(\"color.jpg\",stacked_img)\n",
-    "resultado = cv2.imread(\"color.jpg\")\n",
+    "#cv2.imwrite(\"color.jpg\",stacked_img)\n",
+    "#resultado = cv2.imread(\"color.jpg\")\n",
     "#resultado = cv2.cvtColor(resultado,cv2.COLOR_BGR2RGB)\n",
-    "plt.imshow(resultado)\n",
-    "plt.show()\n",
-    "\n",
-    "#print(blue[:,:,0])"
+    "#plt.imshow(resultado)\n",
+    "#plt.show()\n"
    ]
   },
   {
